@startuml

interface ISubscriber {
   +Update(IPublisher))
}

interface IPublisher {
   +Subscribe(IListener)
   +Unsubscribe(IListener)
   +Notify()
}

class SchedulePublisher {
   -Listeners: List<ISubscriber>
    +Subscribe(ISubscriber)
    +Unsubscribe(ISubscriber)
    +Notify()
}

class ProfessionalSubscriber {
   -Name : string
   -Email: string
   +Update(IPublisher)
}

class CustomerSubscriber {
   -Name : string
   -Email: string
    +Update(IPublisher)
}

class Program {
  
}

IPublisher <|.. SchedulePublisher
ISubscriber <|.. ProfessionalSubscriber
ISubscriber <|.. CustomerSubscriber

Program --> CustomerSubscriber
Program --> ProfessionalSubscriber
Program --> SchedulePublisher

SchedulePublisher o--> ISubscriber

@enduml